--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.0
-Flask-CORS==4.0.0
-qrcode[pil]==7.4.2
-Pillow==10.1.0
-reportlab==4.0.8
-gunicorn==21.2.0
-requests==2.32.4
+Flask>=2.3.0,<4.0.0
+Flask-CORS>=3.0.0,<5.0.0
+qrcode[pil]>=7.0.0,<8.0.0
+Pillow>=9.0.0,<11.0.0
+reportlab>=3.6.0,<5.0.0
+gunicorn>=20.0.0,<22.0.0
+requests>=2.25.0,<3.0.0
